test/cases/compile_errors/stage1/obj/indexing_a_undefined_slice_at_comptime.zig
comptime {
    var slice: []u8 = undefined;
    slice[0] = 2;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:10: error: index 0 outside slice of size 0
